Reactivated iREP 3.0 handshake flags for InDev

--- a/brews/strength/reagents/iREP-config/iREP-InDev/config.ini
+++ b/brews/strength/reagents/iREP-config/iREP-InDev/config.ini
@@ -5,12 +5,12 @@ clientVersion = v2.7
 clientRevision = .16
 apiVersion = v1.0
 apiRevision = .11
-; sceneVersion = v1.0
-; sceneRevision = .10
+sceneVersion = v1.0
+sceneRevision = .10
 modulesVersion = v1.0
 modulesRevision = .11
-; utilsVersion = v1.0
-; utilsRevision = .10
+utilsVersion = v1.0
+utilsRevision = .10
 
 [database]
 username = 'KEEPASS_DB_USR'
