--- a/brews/dexterity/reagents/odbc-ini/iREP-MTL/odbc.ini
+++ b/brews/dexterity/reagents/odbc-ini/iREP-MTL/odbc.ini
@@ -5,8 +5,8 @@ iseries = iseries
 Description = iSeries Access ODBC Driver
 Driver = iSeries Access ODBC Driver
 System = 10.1.1.10
-UserID = KeePass
-Password = KeePass
+UserID = KEEPASS_ODBC_USR
+Password = KEEPASS_ODBC_PWD
 Naming = 1
 DefaultLibraries = irepprod, irepwm
 Database =DB2DB
